# jsh4

./: .gitmodules  CMakeLists.txt  DESIGN.md  TODO.md  jshrc.d.ts  package-lock.json  package.json  tsconfig.json
examples/: jshrc-multiline.mjs  jshrc.mjs
mb-applet/: package-lock.json  package.json  tsconfig.json
mb-applet/src/: applet.ts  protocol.ts
mb-applet/types/: globals.d.ts  mb-source.md
share/: tsconfig.json
share/completions/: git.ts  npm.ts
src/: index.ts  loader-hooks.ts
src/api/: index.ts
src/colorize/: index.ts
src/completion/: index.ts
src/completions/: git.ts
src/exec/: index.ts
src/executor/: index.ts
src/expander/: index.ts
src/history/: index.ts
src/jobs/: index.ts
src/jsfunctions/: index.ts
src/mb/: applet.ts  client.ts  handshake.ts  protocol.ts
src/native/: addon.cc  executor.cc  executor.h  history-writer.cc  history-writer.h  input-engine.cc  input-engine.h  linenoise.cc  linenoise.h
src/parser/: ast.ts  errors.ts  index.ts  lexer.ts  parser.ts
src/repl/: index.ts
src/shellopts/: index.ts
src/structured/: cache.ts  channel.ts  ir.ts
src/structured/builtins/: avg.ts  avg_by.ts  count.ts  drop.ts  du.ts  env.ts  find.ts  from_jsonl.ts  import.ts  index.ts  jsonl.ts  ls.ts  ls_format.ts  map.ts  max.ts  max_by.ts  min.ts  min_by.ts  ps.ts  select.ts  sort.ts  sort_by.ts  stat.ts  sum.ts  sum_by.ts  table.ts  tail.ts  take.ts  to_jsonl.ts  uniq.ts  uniq_by.ts  where.ts
src/structured/extract/: index.ts
src/terminal/: ansi.ts  colors.ts  index.ts  renderer.ts  widgets.ts
src/trap/: index.ts
src/variables/: index.ts  positional.ts
test/: api.test.ts  case_heredoc.test.ts  colorize.test.ts  completion.test.ts  exec.test.ts  executor.test.ts  helpers.ts  history.test.ts  jsfunctions.test.ts  lexer.test.ts  linenoise.test.ts  parser.test.ts  structured.test.ts  structured_builtins.test.ts  structured_extract.test.ts  structured_jsonl.test.ts  structured_sources.test.ts
tools/: extract-builtin-schemas.ts
